{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "43d3a3a9-acae-47d2-83e5-e07e0dc36615",
            "actions": [
                {
                    "name": "RightHandOnOff",
                    "type": "Button",
                    "id": "e34d182c-8584-4f82-adef-d7004c5abf0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftHandOnOff",
                    "type": "Button",
                    "id": "ebd1475e-cf33-469c-891b-ae17674f2a97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "4384b963-19b9-4779-b14d-50c609bc8ab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "aed656b1-8ad0-4f32-bb4c-b1587e489e30",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "1eac062d-a7f2-4903-a911-331b210f46d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateHand",
                    "type": "Button",
                    "id": "bef9bab9-83eb-4fbd-863a-b409a0b92854",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HandAltitude",
                    "type": "Value",
                    "id": "9b0da7cc-34a2-4798-bf1a-cb32760a668e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b461adbe-cde9-4999-a3e5-5da2b50e07b4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0de657ae-45d3-4829-95a2-07cb864eab05",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d20dd8c5-82a3-423d-bf87-fb12eb19875b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "434a703d-ee3a-4ceb-903d-d3ec632ab063",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a672a27a-867a-4209-8d06-a32d394119dc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78b95012-72b3-400b-9869-4edfb5c07908",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandAltitude",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}